fix: incomplete fix but valuable as a stepping stone to subsequent solution. The problem is with the arrow that points to an icon button. It must be aligned with both the button and the frame component at once, for all screen sizes. This partial fix works for three out of four buttons.

--- a/header.css
+++ b/header.css
@@ -3,6 +3,7 @@
 i {
   position: relative;
 }
+
 .triangle {
   width: 0;
   height: 0;
@@ -10,8 +11,9 @@ i {
   border-right: solid 20px transparent;
   border-bottom: solid 20px transparent;
   position: absolute;
-  top: 72px;
   left: 4px;
+  /* top: 72px; */
+  /* bottom: -44px; */
 }
 
 .triangle.show {
